--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ hr {
 /* Screens */
 /* web */
 @media screen and (max-width:1440px) {
-    main {
+    .card {
         width: 350px;
         height: 600px;
         margin: 150px 0;
@@ -68,7 +68,7 @@ hr {
 
 /* mobile */
 @media screen and (max-width:375px) {
-    main {
+    .card {
         width: 330px;
         height: 540px;
         margin: 60px 0;
@@ -114,12 +114,19 @@ body {
 
 /* card */
 main {
-    
-    background-color: var(--vDarkBlueC);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* border-radius: 20px; */
+}
+.card{
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 20px;
+    background-color: var(--vDarkBlueC);
+
+
 }
 
 #Scard {
